--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -18,12 +18,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button16"
         app:layout_constraintHorizontal_bias="0.552"
-        app:layout_constraintStart_toEndOf="@+id/button13"
-        app:layout_constraintTop_toBottomOf="@+id/login_button"
+        app:layout_constraintStart_toEndOf="@+id/create_account_button"
+        app:layout_constraintTop_toBottomOf="@+id/kakao_login_button"
         app:layout_constraintVertical_bias="0.257" />
 
     <Button
-        android:id="@+id/button13"
+        android:id="@+id/create_account_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
@@ -32,7 +32,7 @@
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_button"
+        app:layout_constraintTop_toBottomOf="@+id/kakao_login_button"
         app:layout_constraintVertical_bias="0.257" />
 
     <Button
@@ -46,7 +46,7 @@
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_button"
+        app:layout_constraintTop_toBottomOf="@+id/kakao_login_button"
         app:layout_constraintVertical_bias="0.46" />
 
     <EditText
@@ -128,7 +128,7 @@
         app:layout_constraintVertical_bias="0.907" />
 
     <com.kakao.usermgmt.LoginButton
-        android:id="@+id/login_button"
+        android:id="@+id/kakao_login_button"
         android:layout_width="341dp"
         android:layout_height="44dp"
         android:visibility="visible"
