--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -50,7 +50,7 @@
         app:layout_constraintVertical_bias="0.217" />
 
     <EditText
-        android:id="@+id/input_PW"
+        android:id="@+id/input_password"
         android:layout_width="338dp"
         android:layout_height="49dp"
         android:background="@drawable/round_circle"
@@ -81,7 +81,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input_PW" />
+        app:layout_constraintTop_toBottomOf="@+id/input_password" />
 
     <TextView
         android:id="@+id/title"
@@ -123,11 +123,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input_PW"
+        app:layout_constraintTop_toBottomOf="@+id/input_password"
         app:layout_constraintVertical_bias="0.394" />
 
     <EditText
-        android:id="@+id/input_ID"
+        android:id="@+id/input_email"
         android:layout_width="336dp"
         android:layout_height="49dp"
         android:background="@drawable/round_circle"
@@ -137,7 +137,7 @@
         android:paddingLeft="15dp"
         android:textColorHint="#000000"
         android:textColor="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/input_PW"
+        app:layout_constraintBottom_toTopOf="@+id/input_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
