--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -24,35 +24,43 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#FFFF0000"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="20dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
+            android:fontFamily="@font/notosansregular"
             android:text="아이디(이메일)"
-            android:textSize="15dp"
-            android:fontFamily="@font/notosansregular"/>
+            android:textColor="#000000"
+            android:textSize="15dp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <EditText
+                    android:id="@+id/register_email"
                     android:layout_width="290dp"
                     android:layout_height="wrap_content"
-                    android:textColorHint="#939393"
-                    android:hint="이메일 주소"
-                    android:textSize="13dp"
                     android:backgroundTint="#ED6868"
-                    android:fontFamily="@font/notosansregular"/>
+                    android:fontFamily="@font/notosansregular"
+                    android:hint="이메일 주소"
+                    android:textColor="#000000"
+                    android:textColorHint="#939393"
+                    android:textSize="13dp" />
 
                 <Button
+                    android:id="@+id/register_email_check"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right|center"
@@ -62,138 +70,184 @@
                     android:textColor="#ED6868" />
             </FrameLayout>
         </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
+            android:fontFamily="@font/notosansregular"
             android:text="비밀번호"
-            android:textSize="15dp"
-            android:fontFamily="@font/notosansregular"/>
+            android:textColor="#000000"
+            android:textSize="15dp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <EditText
+                    android:id="@+id/register_pwd"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColorHint="#939393"
+                    android:backgroundTint="#ED6868"
+                    android:fontFamily="@font/notosansregular"
                     android:hint="비밀번호"
-                    android:textSize="13dp"
-                    android:backgroundTint="#ED6868"
-                    android:fontFamily="@font/notosansregular"/>
+                    android:textColor="#000000"
+                    android:textColorHint="#939393"
+                    android:textSize="13dp" />
             </FrameLayout>
         </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
+            android:fontFamily="@font/notosansregular"
             android:text="비밀번호 확인"
-            android:textSize="15dp"
-            android:fontFamily="@font/notosansregular"/>
+            android:textColor="#000000"
+            android:textSize="15dp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <EditText
+                    android:id="@+id/regitser_pwd_check"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColorHint="#939393"
+                    android:backgroundTint="#ED6868"
+                    android:fontFamily="@font/notosansregular"
                     android:hint="비밀번호 확인"
-                    android:textSize="13dp"
-                    android:backgroundTint="#ED6868"
-                    android:fontFamily="@font/notosansregular"/>
+                    android:textColor="#000000"
+                    android:textColorHint="#939393"
+                    android:textSize="13dp" />
             </FrameLayout>
         </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
+            android:fontFamily="@font/notosansregular"
             android:text="이름"
-            android:textSize="15dp"
-            android:fontFamily="@font/notosansregular"/>
+            android:textColor="#000000"
+            android:textSize="15dp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <EditText
+                    android:id="@+id/register_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColorHint="#939393"
+                    android:backgroundTint="#ED6868"
+                    android:fontFamily="@font/notosansregular"
                     android:hint="실명을 입력하세요"
-                    android:textSize="13dp"
-                    android:backgroundTint="#ED6868"
-                    android:fontFamily="@font/notosansregular"/>
+                    android:textColor="#000000"
+                    android:textColorHint="#939393"
+                    android:textSize="13dp" />
             </FrameLayout>
         </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
+            android:fontFamily="@font/notosansregular"
             android:text="생년월일"
-            android:textSize="15dp"
-            android:fontFamily="@font/notosansregular"/>
+            android:textColor="#000000"
+            android:textSize="15dp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <EditText
+
+                <TextView
+                    android:id="@+id/register_birthday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColorHint="#939393"
-                    android:hint="8자리 입력"
-                    android:textSize="13dp"
                     android:backgroundTint="#ED6868"
-                    android:fontFamily="@font/notosansregular"/>
+                    android:fontFamily="@font/notosansregular"
+                    android:hint="8자리 입력"
+                    android:textColor="#000000"
+                    android:textColorHint="#939393"
+                    android:textSize="13dp" />
+
+                <Button
+                    android:id="@+id/register_birthday_input"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right|center"
+                    android:background="@drawable/circle_design2"
+                    android:fontFamily="@font/notosansbold"
+                    android:text="생일입력"
+                    android:textColor="#ED6868" />
             </FrameLayout>
         </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
+            android:fontFamily="@font/notosansregular"
             android:text="성별"
-            android:textSize="15dp"
-            android:fontFamily="@font/notosansregular"/>
+            android:textColor="#000000"
+            android:textSize="15dp" />
+
         <RadioGroup
+            android:id="@+id/register_gender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <RadioButton
+                android:id="@+id/register_female"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#000000"
-                android:textSize="13dp"
-                android:fontFamily="@font/notosansregular"
                 android:buttonTint="#ED6868"
                 android:checked="true"
-                android:text="여성"/>
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosansregular"
+                android:text="여성"
                 android:textColor="#000000"
                 android:textSize="13dp"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <RadioButton
+                android:id="@+id/register_male"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="60dp"
-                android:fontFamily="@font/notosansregular"
                 android:buttonTint="#ED6868"
-                android:text="남성"/>
+                android:fontFamily="@font/notosansregular"
+                android:text="남성"
+                android:textColor="#000000"
+                android:textSize="13dp"
+                tools:ignore="TouchTargetSizeCheck" />
         </RadioGroup>
+
         <Button
+            android:id="@+id/btn_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="회원가입"
+            android:background="@drawable/round_circle3"
             android:fontFamily="@font/notosansbold"
+            android:text="회원가입"
             android:textColor="#ffffff"
-            android:background="@drawable/round_circle3"/>
+            tools:ignore="TouchTargetSizeCheck" />
     </LinearLayout>
 </LinearLayout>
