--- a/app/src/main/res/layout/restab_info_activity.xml
+++ b/app/src/main/res/layout/restab_info_activity.xml
@@ -1,41 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
-
-    <ScrollView
+    android:background="#ffffff"
+    android:orientation="vertical">
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/CoordinatorLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:descendantFocusability="blocksDescendants">
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:fitsSystemWindows="true">
+            <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <com.google.android.material.appbar.AppBarLayout
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#FFFFFF"
-                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
+                    android:orientation="vertical">
                     <ImageView
                         android:id="@+id/imageView4"
                         android:layout_width="match_parent"
                         android:layout_height="202dp"
+                        android:scaleType="centerCrop"
                         app:srcCompat="@drawable/image2" />
-
-                    <View
-                        android:id="@+id/view3"
-                        android:layout_width="match_parent"
-                        android:layout_height="10dp"
-                        android:background="#E8E3E3" />
-
                     <TextView
                         android:id="@+id/res_title"
                         android:layout_width="match_parent"
@@ -47,7 +41,6 @@
                         android:textColor="#000000"
                         android:textSize="24sp"
                         android:textStyle="bold" />
-
                     <TextView
                         android:id="@+id/res_subtitle"
                         android:layout_width="match_parent"
@@ -60,44 +53,24 @@
                         android:textAlignment="center"
                         android:textColor="#000000"
                         android:textSize="15sp" />
-
-                    <View
-                        android:id="@+id/view"
-                        android:layout_width="match_parent"
-                        android:layout_height="10dp"
-                        android:background="#E8E3E3" />
-
-                    <com.google.android.material.tabs.TabLayout
-                        android:id="@+id/tabs"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="#F6B0B0"
-                        android:elevation="1dp"
-                        app:tabGravity="fill"
-                        app:tabMode="fixed"
-                        app:tabSelectedTextColor="#FFFFFF"
-                        app:tabTextColor="#FFFFFF"></com.google.android.material.tabs.TabLayout>
-
-                    <View
-                        android:id="@+id/view4"
-                        android:layout_width="match_parent"
-                        android:layout_height="10dp"
-                        android:background="#E8E3E3" />
-
-                    <FrameLayout
-                        android:id="@id/container"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="#FFFFFF"
-                        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-
-                    </FrameLayout>
-                </com.google.android.material.appbar.AppBarLayout>
-
-            </androidx.coordinatorlayout.widget.CoordinatorLayout>
-        </LinearLayout>
-    </ScrollView>
-
-
-</RelativeLayout>
+                </LinearLayout>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tab_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/white"
+                app:tabSelectedTextColor="#ED6868"
+                app:tabIndicatorColor="#ED6868"
+                tools:ignore="SpeakableTextPresentCheck">
+            </com.google.android.material.tabs.TabLayout>
+        </com.google.android.material.appbar.AppBarLayout>
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#FFFFFF"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+            tools:ignore="SpeakableTextPresentCheck" />
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+</LinearLayout>
