--- a/app/src/main/res/layout/activity_qr_rest.xml
+++ b/app/src/main/res/layout/activity_qr_rest.xml
@@ -85,16 +85,18 @@
                             android:textSize="16sp"
                             android:fontFamily="@font/notosansregular"
                             android:includeFontPadding="false"/>
+
                         <TextView
+                            android:id="@+id/sumTextView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/notosansregular"
+                            android:gravity="right"
+                            android:includeFontPadding="false"
                             android:paddingTop="10dp"
                             android:paddingBottom="10dp"
                             android:textColor="#000000"
-                            android:textSize="16sp"
-                            android:fontFamily="@font/notosansregular"
-                            android:includeFontPadding="false"
-                            android:gravity="right"/>
+                            android:textSize="16sp" />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
